[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "Q", "D"]
ignore = ["Q001", "Q002", "Q003", "D204", "D210", "D211", "D213", "D417", "D407", "D406"]  # Ignore some docstring rules
unfixable = ["Q", "D"]
exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".history",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "__pypackages__"
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"*.py" = ["D100", "D210", "D211", "D213", "D300", "D301", "E402"]  # Ignore some docstring rules

[tool.ruff.format]
indent-style = "space"
quote-style = "preserve"  # Preserve existing quotes instead of converting to single
docstring-code-format = true
docstring-code-line-length = 90
skip-magic-trailing-comma = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "single"
avoid-escape = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pydoclint]
ignore-one-line-docstrings = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true 
strict_optional = true
follow_untyped_imports = true
# ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["*.test.py"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.bandit]
exclude_dirs = [".venv", "__pycache__", "__tests__", ".history"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["**/__tests__"]
python_files = ["test_*.py"]
addopts = "--alluredir=.allure-results"
norecursedirs = ["logs", ".venv", "__pycache__", ".pytest_cache", ".git"]
filterwarnings = [
    "ignore::DeprecationWarning",
]